# scansGame

./: .env.example  .gitignore  CLAUDE.md  CODING_AGENT_PROMPT.md  CODING_AGENT_PROMPT_ARMY.md  CODING_AGENT_PROMPT_WARRENS.md  DEPLOY.sh  Dockerfile  GUILD_DUNGEON_PLAN.md  PLAN.md  START.sh  alembic.ini  debug_battle_html.txt  debug_battle_joined.txt  debug_quest_html.txt  debug_stats_html.txt  debug_wave_html.txt  docker-compose.yml  event_8_plan.json  loot_db.json  loot_db_event_8_w101.json  profiles.json  pyproject.toml  scrape_event.py
.claude/: settings.local.json
alembic/: env.py
veyra/: __main__.py  config.py  main.py  security.py
veyra/api/: routes.py
veyra/db/: engine.py  models.py  repositories.py
veyra/engine/: account_manager.py  achievement_farmer.py  collection_farmer.py  dungeon_army_farmer.py  dungeon_pvp_farmer.py  dungeon_warrens_farmer.py  loot_collector.py  loot_database.py  pvp_fighter.py  quest_runner.py  rate_limiter.py  stamina_farmer.py  stat_allocator.py  team_pvp_fighter.py  wave_farmer.py
veyra/game/: auth.py  client.py  endpoints.py  parser.py  types.py
veyra/web/: app.js  index.html  style.css
